...
  -->

<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Spoken description of indeterminate state of a tri-state checkbox -->
    <string name="indeterminate">Partially checked</string>
    <!-- Spoken description of on state of a switch -->
    <string name="state_on">On</string>
    <!-- Spoken description of off state of a switch -->
    <string name="state_off">Off</string>
    <!-- Spoken description naming a Switch Material UI widget -->
    <string name="switch_role">Switch</string>
    <!-- Spoken description of selected state of a selectable item -->
    <string name="selected">Selected</string>
    <!-- Spoken description of not selected state of a switch -->
    <string name="not_selected">Not selected</string>
...
