...
    }

    ///////////////////////////////////////////////////////////////////////////////////////////////
    // Data management
    ///////////////////////////////////////////////////////////////////////////////////////////////

    val COUNTER = "counter"

    fun getDataStore(context: Context, widgetId: Int): SharedPreferences {
        return context.getSharedPreferences("WIDGET_$widgetId", Context.MODE_PRIVATE)
    }

    fun readCounter(context: Context, widgetId: Int): Int {
...
